@@ -10,6 +10,8 @@ Bugs:
   name. As it was not yet really used, this is no big deal.
 - ALL: Completing invoice lines: computing unitprice based on unitpriceinc with a vatrate
   of -1 (vat free) was not done correctly. Known usages: OC.
+- OC4: Source::getPaymentMethod(): storage of this info has changed in OC4 wrt OC3 and a
+  2nd time within OC4.
 - OC4: Order statuses were not presented by their name (but by their language_id).
 
 Refactorings:
